k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: projecrtai-web
  namespace: projecrtai
  labels:
    app: projecrtai-web
spec:
  type: ClusterIP
  selector:
    app: projecrtai-web
  ports:
    - name: http
      port: 80
      targetPort: http
